tests/NormalTests/paczka1/fuzzy1/68374664.err
Error in line 3: Al44BhRG A465 31,8
Error in line 6: Al44BhRG S55 88,1
Error in line 7: Al44BhRG S612 36,0
Error in line 4: MwSzI3U S311 61,2
Error in line 9: Al44BhRG A465 80,5
Error in line 19: Al44BhRG S55 72,7
Error in line 22: n3qqHes S311 22,6
Error in line 16: S55 S55 20,9
Error in line 24: 7ea S612 70,1
